--- a/css/form.css
+++ b/css/form.css
@@ -162,3 +162,7 @@ div.wide.form .buttons, div.wide.form .hint, div.wide.form .errorMessage
 	clear: left;
 	padding-left: 110px;
 }
+.bs3-form{
+    width: 320px;
+    margin: auto;
+}
