--- a/css/main.css
+++ b/css/main.css
@@ -228,3 +228,8 @@ div.search-form
 	background: #80CFFF;
 }
 .span-19 {width:710px;}
+
+.auth-services{
+    margin: 0 auto !important;
+    width: 390px;
+}
