--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-body
-{
-	margin: 0;
-	padding: 0;
-	color: #555;
-	font: normal 10pt Arial,Helvetica,sans-serif;
-	background: #EFEFEF;
+body {
+    margin: 0;
+    padding: 0;
+    color: #555;
+    font: normal 10pt Arial, Helvetica, sans-serif;
+    background: #EFEFEF;
 }
+
 a {
     text-decoration: none;
 }
@@ -14,229 +14,246 @@ a {
     clear: both;
 }
 
-#page
-{
-	margin-top: 5px;
-	margin-bottom: 5px;
-	background: white;
-	border: 1px solid #C9E0ED;
+#page {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    background: white;
+    border: 1px solid #C9E0ED;
 }
 
-#header
-{
-	margin: 0;
-	padding: 0;
-	border-top: 3px solid #C9E0ED;
+#header {
+    margin: 0;
+    padding: 0;
+    border-top: 3px solid #C9E0ED;
 }
 
-#content
-{
+#content {
     padding: 20px;
 }
 
-#sidebar
-{
-	padding: 20px 20px 20px 0;
+#sidebar {
+    padding: 20px 20px 20px 0;
 }
 
-#footer
-{
-	padding: 10px;
-	margin: 10px 20px;
-	font-size: 0.8em;
-	text-align: center;
-	border-top: 1px solid #C9E0ED;
+#footer {
+    padding: 10px;
+    margin: 10px 20px;
+    font-size: 0.8em;
+    text-align: center;
+    border-top: 1px solid #C9E0ED;
 }
 
-#logo
-{
-	padding: 10px 20px;
-	font-size: 200%;
+#logo {
+    padding: 17px 20px;
+    font-size: 200%;
 }
 
-#mainmenu
-{
-	background:white url(bg.gif) repeat-x left top;
+#logo img {
+    margin-right: 5px;
+    margin-top: -5px;
 }
 
-#mainmenu ul
-{
-	padding:6px 20px 5px 20px;
-	margin:0px;
+#logo span {
+    padding-top: 10px;
 }
 
-#mainmenu ul li
-{
-	display: inline;
+a.logo {
+    color: #555;
+    font-weight: bold;
 }
 
-#mainmenu ul li a
-{
-	color:#ffffff;
-	background-color:transparent;
-	font-size:12px;
-	font-weight:bold;
-	text-decoration:none;
-	padding:5px 8px;
+a.logo:hover {
+    text-decoration: none;
+    color: #000;
 }
 
-#mainmenu ul li a:hover, #mainmenu ul li.active a
-{
-	color: #6399cd;
-	background-color:#EFF4FA;
-	text-decoration:none;
+#mainmenu {
+    background: white url(bg.gif) repeat-x left top;
 }
 
-div.flash-error, div.flash-notice, div.flash-success
-{
-	padding:.8em;
-	margin-bottom:1em;
-	border:2px solid #ddd;
+#mainmenu ul {
+    padding: 6px 20px 5px 20px;
+    margin: 0px;
 }
 
-div.flash-error
-{
-	background:#FBE3E4;
-	color:#8a1f11;
-	border-color:#FBC2C4;
+#mainmenu ul li {
+    display: inline;
 }
 
-div.flash-notice
-{
-	background:#FFF6BF;
-	color:#514721;
-	border-color:#FFD324;
+#mainmenu ul li a {
+    color: #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 5px 8px;
 }
 
-div.flash-success
-{
-	background:#E6EFC2;
-	color:#264409;
-	border-color:#C6D880;
+#mainmenu ul li a:hover, #mainmenu ul li.active a {
+    color: #6399cd;
+    background-color: #EFF4FA;
+    text-decoration: none;
 }
 
-div.flash-error a
-{
-	color:#8a1f11;
+div.flash-error, div.flash-notice, div.flash-success {
+    padding: .8em;
+    margin-bottom: 1em;
+    border: 2px solid #ddd;
 }
 
-div.flash-notice a
-{
-	color:#514721;
+div.flash-error {
+    background: #FBE3E4;
+    color: #8a1f11;
+    border-color: #FBC2C4;
 }
 
-div.flash-success a
-{
-	color:#264409;
+div.flash-notice {
+    background: #FFF6BF;
+    color: #514721;
+    border-color: #FFD324;
 }
 
-div.form .rememberMe label
-{
-	display: inline;
+div.flash-success {
+    background: #E6EFC2;
+    color: #264409;
+    border-color: #C6D880;
 }
 
-div.view
-{
-	padding: 10px;
-	margin: 10px 0;
-	border: 1px solid #C9E0ED;
+div.flash-error a {
+    color: #8a1f11;
 }
 
-div.breadcrumbs
-{
-	font-size: 0.9em;
-	padding: 5px 20px;
+div.flash-notice a {
+    color: #514721;
 }
 
-div.breadcrumbs span
-{
-	font-weight: bold;
+div.flash-success a {
+    color: #264409;
 }
 
-div.search-form
-{
-	padding: 10px;
-	margin: 10px 0;
-	background: #eee;
+div.form .rememberMe label {
+    display: inline;
 }
 
-.portlet
-{
+div.view {
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #C9E0ED;
+}
+
+div.breadcrumbs {
+    font-size: 0.9em;
+    padding: 5px 20px;
+}
+
+div.breadcrumbs span {
+    font-weight: bold;
+}
+
+div.search-form {
+    padding: 10px;
+    margin: 10px 0;
+    background: #eee;
+}
+
+.portlet {
 
 }
 
-.portlet-decoration
-{
-	padding: 3px 8px;
-	background: #B7D6E7;
-	border-left: 5px solid #6FACCF;
+.portlet-decoration {
+    padding: 3px 8px;
+    background: #B7D6E7;
+    border-left: 5px solid #6FACCF;
 }
 
-.portlet-title
-{
-	font-size: 12px;
-	font-weight: bold;
-	padding: 0;
-	margin: 0;
-	color: #298dcd;
+.portlet-title {
+    font-size: 12px;
+    font-weight: bold;
+    padding: 0;
+    margin: 0;
+    color: #298dcd;
 }
 
-.portlet-content
-{
-	font-size:0.9em;
-	margin: 0 0 15px 0;
-	padding: 5px 8px;
-	background:#EFFDFF;
+.portlet-content {
+    font-size: 0.9em;
+    margin: 0 0 15px 0;
+    padding: 5px 8px;
+    background: #EFFDFF;
 }
 
-.portlet-content ul
-{
-	list-style-image:none;
-	list-style-position:outside;
-	list-style-type:none;
-	margin: 0;
-	padding: 0;
+.portlet-content ul {
+    list-style-image: none;
+    list-style-position: outside;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.portlet-content li
-{
-	padding: 2px 0 4px 0px;
+.portlet-content li {
+    padding: 2px 0 4px 0px;
 }
 
-.operations
-{
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+.operations {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
 
-.operations li
-{
-	padding-bottom: 2px;
+.operations li {
+    padding-bottom: 2px;
 }
 
-.operations li a
-{
-	font: bold 12px Arial;
-	color: #0066A4;
-	display: block;
-	padding: 2px 0 2px 8px;
-	line-height: 15px;
-	text-decoration: none;
+.operations li a {
+    font: bold 12px Arial;
+    color: #0066A4;
+    display: block;
+    padding: 2px 0 2px 8px;
+    line-height: 15px;
+    text-decoration: none;
 }
 
-.operations li a:visited
-{
-	color: #0066A4;
+.operations li a:visited {
+    color: #0066A4;
 }
 
-.operations li a:hover
-{
-	background: #80CFFF;
+.operations li a:hover {
+    background: #80CFFF;
 }
-.span-19 {width:710px;}
 
-.auth-services{
+.span-19 {
+    width: 710px;
+}
+
+.auth-services {
     margin: 0 auto !important;
     width: 390px;
+}
+
+a.wellcome {
+    font-size: 24px;
+    color: #297B9F;
+}
+
+.tipsy {
+    font-size: 12px;
+}
+
+.tipsy-inner {
+    max-width: 270px;
+}
+
+div#browsers {
+    height: 100px;
+    margin-top: 15px;
+    text-align: center;
+}
+
+div#browsers a {
+    float: left;
+    height: 20px;
+    padding: 80px 0 7px;
+    width: 220px;
+    cursor: pointer;
+    text-align: center;
+    display: inline-block
 }
